Reduce nav font size to prevent wrapping.

--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -2,7 +2,7 @@
 .navigation__social ul {
 	display: flex;
 	flex-wrap: wrap;
-	font-size: 125%;
+	font-size: 80%;
 	gap: var(--spacer);
 	list-style: none;
 	padding-left: 0; /* Overrides browser default */
